# wismute-rpg

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
assets/: palette.gpl  spritesheet.aseprite  stage.aseprite  test_scene.json  ui.aseprite
scripts/: copy_assets.sh
scripts/palgen/: palgen.py
source/: main.cpp
source/app/: app.cpp  app.h  app_data.h  debug_ui.cpp  debug_ui.h  error.h  settings.cpp  settings.h
source/core/: atlas.cpp  atlas.h  constants.h  lattice.h  palette.h  pixel_renderer.cpp  pixel_renderer.h  renderer.h
source/engine/: atlas.cpp  atlas.h  constants.h  lattice.h  palette.h  pixel_renderer.cpp  pixel_renderer.h  renderer.cpp  renderer.h
source/game/: cards.h  constants.h  enemies.h  events.h  game.cpp  game.h  game_data.h  game_ui.cpp  game_ui.h  path_finder.cpp  path_finder.h  player.h  quad.h  scene.cpp  scene.h  slime.h  sprite.h  stage.cpp  stage.h  tile.h  types.h
source/shader/: basic.fs  basic.vs  pixel.fs  pixel.gs  pixel.vs
source/ui/: action_panel.cpp  action_panel.h  panel.cpp  panel.h  quad.h  widget.h
source/util/: utility.cpp  utility.h
